--- a/backups/styles.css
+++ b/backups/styles.css
@@ -6,18 +6,13 @@
   --green: #4cbd97;
   --purple: #8d51a0;
   --blue: #4ca0d8;
-
 }
 
 body {
-  margin: 0 30%;
   font-family: 'courier prime';
   font-size: 18px;
   background-color: var(--dark);
-  color: var(--light);
-  border-left:  2px solid var(--purple);
-  border-right: 2px solid var(--purple);
-  padding: 5%;
+  color: var(--light)
 }
 
 input, textarea {
@@ -26,7 +21,7 @@ input, textarea {
   font-size: 18px;
   line-height: 1.5;
   background-color: transparent;
-  border: none;
+  border: none
 }
 
 .red {
