--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -9,10 +9,17 @@
 }
 
 body {
+  margin: 30px;
   font-family: 'courier prime';
   font-size: 18px;
   background-color: var(--dark);
   color: var(--light)
+}
+
+header {
+  display: flex;
+  justify-content: space-between;
+  box-shadow: 0 0 12px;
 }
 
 input, textarea {
@@ -21,7 +28,7 @@ input, textarea {
   font-size: 18px;
   line-height: 1.5;
   background-color: transparent;
-  border: none
+  border: none;
 }
 
 .red {
